<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="edu.orangecoastcollege.cs273.dreyna3.ocgreensave.EditEmployeeScheduleActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_employee_schedule_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:background="@color/lightGreen"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_employee_schedule_previous_sched"
        android:textSize="18sp"/>

    <ListView
        android:id="@+id/editEmployeeScheduleListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>//

    <EditText
        android:id="@+id/editScheduleNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/add_schedule_name_text"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:nextFocusDown="@id/editScheduleWeekDateEditText"/>
    <requestFocus/>

    <EditText
        android:id="@+id/editScheduleWeekDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/add_schedule_weekdate_text"
        android:inputType="text"
        android:textSize="26sp"
        tools:ignore="TextFields"
        android:nextFocusDown="@id/editScheduleSundayEditText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/lightGreen"
        android:text="@string/hours_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editScheduleSundayEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_schedule_sunday_text"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="26sp"
            android:nextFocusDown="@id/editScheduleMondayEditText"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editScheduleMondayEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_schedule_monday_text"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="26sp"
            android:nextFocusDown="@id/editScheduleTuesdayEditText"/>

        <EditText
            android:id="@+id/editScheduleThursdayEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_schedule_thursday_text"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="26sp"
            android:nextFocusDown="@id/editScheduleFridayEditText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editScheduleTuesdayEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_schedule_tuesday_text"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="26sp"
            android:nextFocusDown="@id/editScheduleWednesdayEditText"/>

        <EditText
            android:id="@+id/editScheduleFridayEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_schedule_friday_text"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="26sp"
            android:nextFocusDown="@id/editScheduleSaturdayEditText"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editScheduleWednesdayEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_schedule_wednesday_text"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="26sp"
            android:nextFocusDown="@id/editScheduleThursdayEditText"/>


        <EditText
            android:id="@+id/editScheduleSaturdayEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_schedule_saturday_text"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="26sp"/>
    </LinearLayout>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editScheduleClick"
        android:text="@string/edit_schedule_buton_text"
        android:textSize="26sp"
        />

</LinearLayout>
