<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                tools:context="edu.orangecoastcollege.cs273.dreyna3.ocgreensave.MailBaleActivity">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailEditText"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/subject_text"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/emailBaleDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/send_email_body_note"
        android:background="@color/lightGreen"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailBaleDescriptionText"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/emailBaleRadioAluminumButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightGreen"
            android:checked="true"
            android:text="@string/email_bale_type_ac"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/emailBaleRadioPET1Button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/email_bale_type_pet1"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/emailBaleRadioCardboardButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightGreen"
            android:text="@string/email_bale_type_cardboard"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/emailBaleRadioHDPE2Button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/email_bale_type_hdpe2"
            android:textSize="20sp"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sendEmailButton"
        android:text="@string/email_bale_button_info"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/sendEmailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="SendEmail"
        android:text="@string/send_email"
        android:textSize="36sp"/>
</RelativeLayout>
