<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="edu.orangecoastcollege.cs273.dreyna3.ocgreensave.EditSchedulesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGreen"
        android:text="@string/edit_schedules_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_weight="1">

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="toViewAllSchedulesClick"
            android:text="@string/edit_schedule_view_all_schedules"
            android:textSize="26sp"/>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="toEditSchedulesClick"
            android:text="@string/edit_schedules_edit_button_text"
            android:textSize="26sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="toAddScheduleClick"
            android:text="@string/edit_schedules_add_button_text"
            android:textSize="26sp"/>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="toDeleteSchedulesClick"
            android:text="@string/edit_schedule_delete_button_text"
            android:textColor="@color/red"
            android:textSize="26sp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:onClick="backToAdminMenuClick"
        android:padding="15dp"
        android:text="@string/edit_schedule_back_button"
        android:textSize="26sp"/>

</LinearLayout>
