<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.orangecoastcollege.cs273.dreyna3.ocgreensave.AdminActivity"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/AdminOptionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true"
        android:text="@string/adminTextView"
        android:textSize="50sp" />

    <Button
        android:id="@+id/AdminOptionsLogBaleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="40sp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:text="@string/logBaleButton" />

    <Button
        android:id="@+id/AdminOptionsEditEmployeesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:textSize="40dp"
        android:layout_weight="1"
        android:text="@string/editEmployees" />

    <Button
        android:id="@+id/AdminOptionsEditScheduleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:textSize="40dp"
        android:layout_weight="1"
        android:text="@string/editScheduleButton" />

    <Button
        android:id="@+id/AdminOptionsbackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_activity_mainmenu_button"
        android:onClick="toMenuButtonClick"/>


</LinearLayout>
