<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.orangecoastcollege.cs273.dreyna3.ocgreensave.MailScheduleActivity"
    android:padding="15dp">

    <EditText
        android:id="@+id/emailScheduleEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="40sp"/> <requestFocus/>

    <EditText
        android:id="@+id/emailScheduleSubjectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/subject_text"
        android:textSize="40sp"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/emailScheduleEmailEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="77dp"
        android:textColor="@color/black"
        android:layout_marginStart="77dp"
        tools:ignore="TextFields"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/emailScheduleSubjectEditText"
        android:textAlignment="center"
        android:text="@string/send_email_body_schedule_note"/>

    <Button
        android:id="@+id/scheduleSendEmail"
        android:layout_width="match_parent"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="emailScheduleClick"
        android:text="@string/send_email"
        android:textSize="40sp"/>

</RelativeLayout>
